# usau-rankings

./: .gitignore  README.md  app.py  games.json  pyproject.toml  rankings.py  requirements.txt
data/: event_ckpt.json  events.csv  events_normalized.csv  games.json
src/usau_rankings/: __init__.py  batch_scrape_schedules.py  cli.py  event_discovery.py  event_normalize.py  match_report_parser.py  rating_engine.py  schedule_scraper.py  usau_ingest.py
src/usau_rankings/ui/: __init__.py  app.py  utils.py
tests/: test_cli.py  test_match_report_parser.py  test_rating_engine.py  test_schedule_scraper.py  test_usau_ingest.py
tests/fixtures/: match_report_1.html
